<resources>
    <string name="app_name">Life Diary</string>
    <string name="action_settings">Settings</string>

    <string name="text">This is your memorable moment.</string>
    <string name="title">My Description</string>
    <string name="context_menu">Context menu</string>
    <string name="diary_name">Diary</string>
    <string name="day_name">Day</string>
    <string name="plan_name">Plan</string>
    <string name="record_name">Record</string>
    <string name="setting_name">Setting</string>
    <string name="setting_main_name">Your name</string>
    <string name="setting_main_name_label">Name</string>
    <string name="setting_main_gender_label">Gender</string>
    <string name="setting_main_gender">Your gender</string>

    <string name="setting_main_age_label">Age</string>
    <string name="setting_main_age">Your age</string>
    <string name="setting_main_description_label">-- Description --</string>
    <string name="add_homepage_name">Add Homepage</string>
    <string name="setting_main_description">Your desription</string>
    <string name="title_activity_maps">Map</string>
    <string name="service_not_available">Network unavailable</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude values</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="nothing_receive">Nothing received</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="plan_title">Plan</string>
    <string name="plan_time">06.06.2016</string>
    <string name="plan_location">UTS Buildting 11</string>
    <string name="plan_divider">|</string>
    <string name="plan_detail">Details</string>
    <string name="diary_title">Diary</string>
    <string name="record_title">Record Your Life</string>
    <string name="diary_detail_name">Diary Detail</string>
    <string name="diary_datetime">Date</string>
    <string name="diary_detail">Your valuable memory.</string>
    <string name="add_plan_title">Plan Title :</string>
    <string name="add_plan_date">Plan Date :</string>
    <string name="add_plan_location">Plan Location :</string>
    <string name="add_plan_detail">Plan Detail :</string>
    <string name="add_day_title">Title :</string>
    <string name="add_day_date">Date :</string>
    <string name="add_day_detail">Detail :</string>
    <string name="urgent">Total Urgent Plans :</string>
    <string name="normal">Total Normal Plans :</string>
    <string name="plan_number">20</string>
    <string name="map_hint">Please press the button to get your location</string>
    <string name="diary_date_hint">Date</string>
    <string name="diary_location_hint">Location</string>
    <string name="diary_weather_hint">Weather</string>

</resources>
