<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_item_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <include layout="@layout/toolbar" />

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/setting_main_profile_imageview"/>
    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"
            android:text="@string/setting_main_name_label"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/setting_main_name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:singleLine="true"
            android:editable="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:textSize="20sp"
            android:text="@string/setting_main_gender_label"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/setting_main_gender"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:singleLine="true"
            android:editable="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"
            android:text="@string/setting_main_age_label"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/setting_main_age"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:singleLine="true"
            android:editable="true"
            android:numeric="integer"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/setting_main_description_label"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:editable="true"
        android:gravity="left|top" />
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="OK"

        android:layout_marginBottom="10dp"/>
    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>
