<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="350dp"
    android:background="#ffffffff"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/add_day_dialog">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:text="@string/add_day_title" />
        <EditText android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/add_day_title_textview"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:text="@string/add_day_date" />
        <EditText android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/add_day_date_textview"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:text="@string/add_day_detail" />
        <EditText android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/add_day_text_textview"
            />
    </LinearLayout>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_day_types_spinner"
        android:entries="@array/types"
        android:layout_marginTop="10dp"
        android:textSize="18sp">
    </Spinner>

</LinearLayout>
