<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="350dp"
    android:background="#ffffffff"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/add_plan_dialog">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:text="@string/add_plan_title" />
        <EditText android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/add_plan_title_textview"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:text="@string/add_plan_date" />
        <EditText android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/add_plan_date_textview"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:text="@string/add_plan_location" />
        <EditText android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/add_plan_location_textview"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:text="@string/add_plan_detail" />
        <EditText android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/add_plan_text_textview"
            />
    </LinearLayout>

        <RadioGroup
            android:id="@+id/add_plan_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="5dp">
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Urgent"
                android:layout_marginRight="50dp"
                android:textSize="18sp"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Normal"
                android:textSize="18sp"/>
        </RadioGroup>



</LinearLayout>
