<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Android="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_item_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    Android:clipToPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/add_homepage_photo_imageview"
                    android:layout_width="@dimen/fragment_main_image_width"
                    android:layout_height="@dimen/fragment_main_image_height"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/fragment_main_image_margin"
                    android:scaleType="fitXY"
                    android:src="@drawable/homepage_default" />

                <EditText
                    android:id="@+id/add_homepage_title_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/add_homepage_photo_imageview"
                    android:layout_marginLeft="@dimen/half_margin"
                    android:ellipsize="end"
                    android:hint="@string/title"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/text_normal"

                    android:textSize="@dimen/headline"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/add_homepage_date_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/add_homepage_title_edittext"
                    android:layout_marginRight="@dimen/half_margin"
                    android:hint="@string/diary_date_hint"
                    android:inputType="date"
                    android:textSize="@dimen/subheading" />

                <EditText
                    android:id="@+id/add_homepage_weather_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/add_homepage_date_textview"
                    android:layout_marginRight="@dimen/half_margin"
                    android:hint="@string/diary_weather_hint"
                    android:textSize="@dimen/subheading" />

                <EditText
                    android:id="@+id/add_homepage_text_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/add_homepage_weather_edittext"
                    android:layout_marginLeft="@dimen/half_margin"
                    android:layout_marginRight="@dimen/half_margin"
                    android:hint="@string/text"
                    android:textColor="@color/text_normal"
                    android:textSize="@dimen/menu_text_size" />

                <EditText
                    android:id="@+id/add_homepage_location_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/add_homepage_text_edittext"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/half_margin"
                    android:hint="@string/diary_location_hint" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/add_homepage_location_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/add_homepage_location_edittext"
                    android:layout_marginBottom="@dimen/fab_margin_down"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:src="@drawable/ic_locate"
                    app:backgroundTint="@color/menu_item_background"

                    />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/add_homepage_add_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/add_homepage_location_edittext"
                    android:layout_marginBottom="@dimen/fab_margin_down"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:src="@drawable/ic_ok"
                    app:backgroundTint="@color/float_action_button_add_diary" />
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>

